data/derived/comb/progs/unify/prog8961.ml.out
Characters 79-88:
  let f a x = match x with (x1,x2) -> (0,(x1 + x2) @ a) in
                                         ^^^^^^^^^
Error: This expression has type int but an expression was expected of type
         'a list
